TheMightyDude (27 Dec 2006)
--------------------------------------
Fixed the score bug, was genscore(...) function was using armour when it should of been armor.
Fixed score bug which was down to genscore using an if statment resulting in some score going to 0.

TheMightyDude (14 Dec 2006)
--------------------------------------
[1564468] Added part of Patch.
Fixed error "error in the SQL statement (not null column corp set to null)"

TheMightyDude (27 Oct 2006)
--------------------------------------
[1585781] Players log showing wrong date when viewing. (Fixed)

TheMightyDude (22 May 2006)
--------------------------------------
[1493132] Extra Sector using preset.php (fixed)

TheMightyDude (20 May 2006)
--------------------------------------
[1491795] ip detection bug (fixed)

TheMightyDude (21 April 2006)
--------------------------------------
[1470569] Num of moves moved in traderoute not showing FIXED.

TheMightyDude (20 April 2006)
--------------------------------------
Added all the missing Folders and the contents in them.
Patched all in [1470442] Various Bugs (fixes included) apart from the language files.

TheMightyDude (05 February 2006)
--------------------------------------
Patched function connectdb() so that it doesn't blank screen on Setup Info :)
Usage connectdb(false) if error connecting display nothing.
Usage connectdb() if error connecting display "Unable to connect to the database".

Brian Gustin (02 February 2006)
--------------------------------------
fixed bug in traderoutes where players enter number of times to repeat in text box, and got "non existent traderoute" error-
had to make $engage global in the function.

TheMightyDude (02 February 2006)
--------------------------------------
Moved $release_version to the next line after $game_name in config.php to make it easier to find.

Brian Gustin (18 January 2006)
--------------------------------------